--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,3 +21,22 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.post-enter {
+  transform: translateY(-80px);
+  /* opacity: 0.2; */
+}
+
+.post-enter-active {
+  transform: translateY(0);
+  transition: all 300ms ease-in;
+}
+
+.post-exit {
+  /* opacity: 0.2; */
+}
+
+.post-exit-active {
+  transform: translateY(-80px);
+  transition: all 300ms ease-in;
+}
