--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,6 +6,7 @@
 
 #root {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -40,3 +41,8 @@
   transform: translateY(-80px);
   transition: all 300ms ease-in;
 }
+
+/* .active {
+  color: red;
+  cursor: default;
+} */
