Added comments to post

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,6 +10,11 @@
   justify-content: center;
 }
 
+h2:first-letter,p::first-letter {
+  text-transform: uppercase;
+}
+
+
 .App {
   width: 800px;
 }
